ingress-lessons/basic/host-based-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations: 
    #cert-manager.io/cluster-issuer: "letsencrypt-stag"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingressClassName: "nginx"
spec:
  ingressClassName: "nginx"
  tls: 
    - hosts: 
      - nginx-demo-k8s.anajak-khmer.site
      - reactjs-demo-k8s.anajak-khmer.site
      secretName: nginx-k8s-tls 
  rules:

  - host: nginx-demo-k8s.anajak-khmer.site
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx-svc 
            port: 
              number: 80
  - host: reactjs-demo-k8s.anajak-khmer.site
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: earthdx-svc 
            port: 
              number: 80
